amf-client/shared/src/test/resources/parser-results/error/not-existing-http-include.raml
#%RAML 0.8
---
title: not existing http file

schemas:
  - fail: !include https://a.ml/notexists